--- a/main.html
+++ b/main.html
@@ -8,8 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<div class="testimonial-container">
+		<!-- <p class="Heading">Testimonials</p> -->
+    <div class="testimonial">
+        <p>"This is an amazing service! Highly recommend it." <span>-John Doe</span> </p>
+		
+        <!-- <p class="author">- John Doe</p> -->
+    </div>
+    <div class="testimonial">
+        <p>"I had a great experience. The team was very helpful." <span>-John Doe</span></p>
+        <!-- <p class="author">- Jane Smith</p> -->
+    </div>
+</div>
+		
 
 </body>
 
