--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="testimonial-container">
+	   <h1>Testimonial</h1>
 		<!-- <p class="Heading">Testimonials</p> -->
     <div class="testimonial">
         <p>"This is an amazing service! Highly recommend it." <span>-John Doe</span> </p>
