--- a/main.html
+++ b/main.html
@@ -7,22 +7,16 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
 	<div class="testimonial-container">
-	   <h1>Testimonial</h1>
-		<!-- <p class="Heading">Testimonials</p> -->
     <div class="testimonial">
-        <p>"This is an amazing service! Highly recommend it." <span>-John Doe</span> </p>
-		
-        <!-- <p class="author">- John Doe</p> -->
+        <p>"This is an amazing service! Highly recommend it."</p>
+        <p class="author">- John Doe</p>
     </div>
     <div class="testimonial">
-        <p>"I had a great experience. The team was very helpful." <span>-John Doe</span></p>
-        <!-- <p class="author">- Jane Smith</p> -->
+        <p>"I had a great experience. The team was very helpful."</p>
+        <p class="author">- Jane Smith</p>
     </div>
 </div>
-		
-
 </body>
 
 </html>
