--- a/main.html
+++ b/main.html
@@ -8,7 +8,9 @@
 
 <body>
 	<div class="testimonial-container">
+		<h1>Testimonials</h1>
     <div class="testimonial">
+		
         <p>"This is an amazing service! Highly recommend it."</p>
         <p class="author">- John Doe</p>
     </div>
